--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
-.mypy_cache/
-.pytest_cache/
-cryptography318.egg-info/
-/Pipfile
-/Pipfile.lock
-dist/
-build/
-/tests
-venv/
-/.DS_Store
-.idea/
-cryptography318/.idea
-cryptography318/__pycache__
+*
+*/
+!.gitignore
+!.gitattributes
+!requirements.txt
+!cryptography318/
+!setup.py
+!README.md
