--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,10 @@ dmypy.json
 
 # VSCode project settings
 .vscode/
+
+# MacOS something
+.DS_Store
+
+# Jetbrains stuff (I think?)
+Pipfile
+Pipfile.lock
